shared-business-logics/services/ai-services/Backend/Java/machine-learning-operations/ai-inference-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-inference-service
  namespace: ai-services
  labels:
    app: ai-inference-service
    team: team-f-ai-services
spec:
  type: ClusterIP
  selector:
    app: ai-inference-service
  ports:
  - name: http
    port: 8252
    targetPort: 8252
    protocol: TCP
